--- a/force-app/main/default/layouts/FS_AceptacionRechazoCaso__c-Formato Aceptación %2F Rechazo de Caso.layout-meta.xml
+++ b/force-app/main/default/layouts/FS_AceptacionRechazoCaso__c-Formato Aceptación %2F Rechazo de Caso.layout-meta.xml
@@ -12,21 +12,21 @@
                 <field>FS_Cliente__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>FS_Tipo__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>FS_Caso__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>FS_MotivoInsatisfaccion__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Readonly</behavior>
                 <field>FS_Comentarios__c</field>
             </layoutItems>
         </layoutColumns>
