--- a/force-app/main/default/layouts/Case-Layout Interno Casos.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-Layout Interno Casos.layout-meta.xml
@@ -252,6 +252,9 @@
         <quickActionListItems>
             <quickActionName>FeedItem.PollPost</quickActionName>
         </quickActionListItems>
+        <quickActionListItems>
+            <quickActionName>Case.SendEmail</quickActionName>
+        </quickActionListItems>
     </quickActionList>
     <relatedContent>
         <relatedContentItems>
