--- a/force-app/main/default/layouts/Account-Formato de cuentas.layout-meta.xml
+++ b/force-app/main/default/layouts/Account-Formato de cuentas.layout-meta.xml
@@ -419,6 +419,10 @@
         <fields>FS_Comentarios__c</fields>
         <relatedList>FS_AceptacionRechazoCaso__c.FS_Cliente__c</relatedList>
     </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>FS_ProductoAdquirido__c.FS_Cuenta__c</relatedList>
+    </relatedLists>
     <relatedObjects>ParentId</relatedObjects>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
