--- a/force-app/main/default/layouts/FS_AceptacionRechazoCaso__c-Formato Aceptación %2F Rechazo de Caso.layout-meta.xml
+++ b/force-app/main/default/layouts/FS_AceptacionRechazoCaso__c-Formato Aceptación %2F Rechazo de Caso.layout-meta.xml
@@ -23,7 +23,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
-                <field>FS_MotivoInsatisfaccion__c</field>
+                <field>FS_MotivoRechazo__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
