--- a/force-app/main/default/layouts/Case-Layout Interno Casos.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-Layout Interno Casos.layout-meta.xml
@@ -191,6 +191,18 @@
         <fields>CREATED_DATE</fields>
         <relatedList>FS_HistorialDescripcionCaso__c.FS_Caso__c</relatedList>
     </relatedLists>
+    <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
+        <excludeButtons>New</excludeButtons>
+        <fields>NAME</fields>
+        <fields>FS_NombreCampo__c</fields>
+        <fields>FS_NombreApiCampo__c</fields>
+        <fields>FS_ValorOriginal__c</fields>
+        <fields>FS_ValorNuevo__c</fields>
+        <fields>CREATEDBY_USER</fields>
+        <fields>CREATED_DATE</fields>
+        <relatedList>FS_HistorialCampos__c.FS_Caso__c</relatedList>
+    </relatedLists>
     <relatedObjects>ContactId</relatedObjects>
     <runAssignmentRulesDefault>false</runAssignmentRulesDefault>
     <showEmailCheckbox>true</showEmailCheckbox>
