--- a/force-app/main/default/layouts/Task-Formato Tareas Casos.layout-meta.xml
+++ b/force-app/main/default/layouts/Task-Formato Tareas Casos.layout-meta.xml
@@ -72,7 +72,7 @@
         <label>Description Information</label>
         <layoutColumns>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>Description</field>
             </layoutItems>
         </layoutColumns>
