--- a/force-app/main/default/layouts/Case-Layout Interno Casos.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-Layout Interno Casos.layout-meta.xml
@@ -28,7 +28,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
-                <field>Origin</field>
+                <field>FS_OrigenCaso__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
@@ -86,6 +86,10 @@
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>SuppliedEmail</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Origin</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
