--- a/force-app/main/default/layouts/Case-Layout Cliente.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-Layout Cliente.layout-meta.xml
@@ -30,7 +30,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
-                <field>Origin</field>
+                <field>FS_OrigenCaso__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
@@ -100,6 +100,10 @@
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>SuppliedEmail</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Origin</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
