--- a/force-app/main/default/layouts/Case-Layout Interno Casos.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-Layout Interno Casos.layout-meta.xml
@@ -165,6 +165,7 @@
         <fields>TASK.SUBJECT</fields>
         <fields>TASK.WHO_NAME</fields>
         <fields>ACTIVITY.TASK</fields>
+        <fields>TASK.STATUS</fields>
         <fields>TASK.DUE_DATE</fields>
         <fields>CORE.USERS.FULL_NAME</fields>
         <fields>TASK.LAST_UPDATE</fields>
