--- a/force-app/main/default/layouts/FS_AceptacionRechazoCaso__c-Formato Aceptación %2F Rechazo de Caso.layout-meta.xml
+++ b/force-app/main/default/layouts/FS_AceptacionRechazoCaso__c-Formato Aceptación %2F Rechazo de Caso.layout-meta.xml
@@ -15,6 +15,10 @@
                 <behavior>Readonly</behavior>
                 <field>FS_Tipo__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>FS_Horas__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
