--- a/force-app/main/default/layouts/Case-Layout Cliente.layout-meta.xml
+++ b/force-app/main/default/layouts/Case-Layout Cliente.layout-meta.xml
@@ -185,6 +185,7 @@
         <fields>FS_Tipo__c</fields>
         <fields>FS_MotivoRechazo__c</fields>
         <fields>FS_Comentarios__c</fields>
+        <fields>FS_Horas__c</fields>
         <fields>CREATEDBY_USER</fields>
         <fields>CREATED_DATE</fields>
         <relatedList>FS_AceptacionRechazoCaso__c.FS_Caso__c</relatedList>
@@ -221,7 +222,7 @@
     <showRunAssignmentRulesCheckbox>true</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>true</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h6C000000HM4H</masterLabel>
+        <masterLabel>00h7d0000020ZsC</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
