--- a/force-app/main/default/layouts/Task-Formato Tareas Casos.layout-meta.xml
+++ b/force-app/main/default/layouts/Task-Formato Tareas Casos.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Readonly</behavior>
                 <field>FS_NumeroTarea__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>FS_Cuenta__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
