Agrego objeto de conocimiento

--- a/force-app/main/default/layouts/Account-Formato de cuentas.layout-meta.xml
+++ b/force-app/main/default/layouts/Account-Formato de cuentas.layout-meta.xml
@@ -388,6 +388,7 @@
         <relatedList>RelatedCaseList</relatedList>
     </relatedLists>
     <relatedLists>
+        <fields>NAME</fields>
         <fields>FS_Producto__c</fields>
         <fields>FS_Modulo__c</fields>
         <fields>FS_SubModulo__c</fields>
